#45417 Search field path validation